# kedro-project

asi-s28786/: README.md  pyproject.toml  requirements.txt
asi-s28786/conf/base/: catalog.yml  parameters.yml
asi-s28786/src/: train_model.py
asi-s28786/src/asi_s28786/: __init__.py  __main__.py  settings.py
asi-s28786/src/asi_s28786/pipelines/iris_training/: __init__.py  nodes.py  pipeline.py
asi-s28786/tests/pipelines/iris_training/: test_pipeline.py
